--- a/index.html
+++ b/index.html
@@ -32,20 +32,28 @@
             <img src="img/bill-gates.jpg" alt="bill gates">
             <p>Bill Gates is a visionary innovator and philanthropist who revolutionized technology and dedicated his
                 wealth to improving global lives.</p>
+            <video width="1280" height="720" controls>
+                <source src="video/video.mp4" type="video/mp4">
+                BillGates
+            </video>
         </section>
         <section id="work">
             <h1><u>Work</u></h1>
             <ul>
-            <li><b>1975</b>– Co-founded <b>Microsoft</b> with Paul Allen.</li>
-            <li><b>1980</b>– Partnered with <b>IBM</b> to provide the <b>MS-DOS</b>operating system.</li>
-            <li><b>1985</b>– Released the first version of <b>Windows</b>.</li>
-            <li><b>1995</b>– Became <b>the world’s richest man</b> due to Microsoft’s success.</li>
-            <li><b>2000</b>– Founded the <b>Bill & Melinda GatesFoundation</b>for global charity work.</li>
-            <li><b>2008</b>– Stepped down from his executive role at Microsoft to focus on philanthropy.</li>
-            <li><b>2020</b>– Supported global efforts to fight the <b>COVID-19 pandemic</b>.</li>
+                <li><b>1975</b>– Co-founded <b>Microsoft</b> with Paul Allen.</li>
+                <li><b>1980</b>– Partnered with <b>IBM</b> to provide the <b>MS-DOS</b>operating system.</li>
+                <li><b>1985</b>– Released the first version of <b>Windows</b>.</li>
+                <li><b>1995</b>– Became <b>the world’s richest man</b> due to Microsoft’s success.</li>
+                <li><b>2000</b>– Founded the <b>Bill & Melinda GatesFoundation</b>for global charity work.</li>
+                <li><b>2008</b>– Stepped down from his executive role at Microsoft to focus on philanthropy.</li>
+                <li><b>2020</b>– Supported global efforts to fight the <b>COVID-19 pandemic</b>.</li>
             </ul>
         </section>
         <section id="resume">
+            <h1>Audio</h1>
+            <audio autoplay>
+                <source src="Audio/music.mp3" type="audio/mp3">
+            </audio>
             <h1><u>Resume</u></h1>
             <p>Bill Gates is an American business magnate, software developer, and philanthropist. He co-founded
                 Microsoft in 1975, leading the company to dominate the personal computer industry with Windows. Known
@@ -55,10 +63,14 @@
         </section>
         <section id="contact">
             <h1><u>contact</u></h1>
-            <img src="img/mail.png" alt="mail" height="20px"><p><b>Email:</b>info@gatesfoundation.org</p>
-            <img src="img/internet.png" alt="web" height="20px"><p><b>Website:</b>www.gatesfoundation.org</p>
-            <img src="img/twitter.png" alt="twitter" height="20px"><p><b>Twitter:</b>@BillGates</p>
-            <img src="img/linkedin.png" alt="linkedin" height="20px"><p><b>LinkedIn:</b>Bill Gates</p>
+            <img src="img/mail.png" alt="mail" height="20px">
+            <p><b>Email:</b>info@gatesfoundation.org</p>
+            <img src="img/internet.png" alt="web" height="20px">
+            <p><b>Website:</b>www.gatesfoundation.org</p>
+            <img src="img/twitter.png" alt="twitter" height="20px">
+            <p><b>Twitter:</b>@BillGates</p>
+            <img src="img/linkedin.png" alt="linkedin" height="20px">
+            <p><b>LinkedIn:</b>Bill Gates</p>
         </section>
     </main>
 
