Project 1 with audio and video version 2

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
         <section id="resume">
             <h1>Audio</h1>
-            <audio autoplay>
+            <audio controls>
                 <source src="Audio/music.mp3" type="audio/mp3">
             </audio>
             <h1><u>Resume</u></h1>
