--- a/index.html
+++ b/index.html
@@ -12,39 +12,48 @@
         </div>
         <nav>
             <ul class="navbar">
-                <a href="#home"><li>home</li></a>
-                <a href="#about"><li>about</li></a>
-                <a href="#work"><li>work</li></a>
-                <a href="#resume"><li>resume</li></a>
-                <a href="#contact"><li>contact</li></a>
+                <a href="#home">
+                    <li>home</li>
+                </a>
+                <a href="#about">
+                    <li>about</li>
+                </a>
+                <a href="#work">
+                    <li>work</li>
+                </a>
+                <a href="#resume">
+                    <li>resume</li>
+                </a>
+                <a href="#contact">
+                    <li>contact</li>
+                </a>
             </ul>
         </nav>
     </header>
     <main>
         <section id="home">
-            <div>
-            <h1>Welcome!</h1>
-            <h3>I’m Bill Gates</h3>
-            <p>Born in Seattle, Washington</p>
-            <p>I co-founded Microsoft with a vision to make computing accessible to everyone. From early programming days to leading one of the world’s most influential tech companies, I helped shape the personal computer revolution. My journey didn’t stop at technology — I’ve dedicated much of my life to global philanthropy, focusing on health, education, and poverty reduction through the Gates Foundation.</p>
-            <button>Contact Me</button>
+            <div class="home">
+                <h1>Welcome!</h1>
+                <h3>I’m Bill Gates</h3>
+                <p class="part1">Born in Seattle, Washington</p>
+                <p class="part2">I co-founded Microsoft with a vision to make computing accessible to everyone.<br> From early programming days to leading one of the world’s most influential tech companies,<br> I helped shape the persona computer revolution.<br> My journey didn’t stop at technology — I’ve dedicated much of my life to global philanthropy,<br> focusing on health, education, and poverty reduction through the Gates Foundation.</p>
+                <button><a href="#contact">Contact Me</a></button>
             </div>
-            <div>
-                <img src="img/bill.jpg" alt="bill-gates">
+            <div class="firstimg">
+                <img src="img/bill.jpg" alt="bill-gates" height="400px">
             </div>
         </section>
         <section id="about">
-            <h1><u>About</u></h1>
-            <div class="about">
                 <div class="one">
+                    <h1><u>About</u></h1>
                     <h2><u>Bill Gates</u></h2>
                     <p>Bill Gates was the first to make personal computers accessible to everyone</p>
-                    <p>Bill Gates is a visionary innovator and philanthropist who revolutionized technology and dedicated his wealth to improving global lives.</p>
+                    <p>Bill Gates is a visionary innovator and philanthropist who revolutionized technology and
+                        dedicated his wealth to improving global lives.</p>
                 </div>
                 <div class="two">
-                    <img src="img/bill-gates.jpg" alt="bill gates">
+                    <img src="img/bill-gates.jpg" alt="bill gates" height="600">
                 </div>
-            </div>
         </section>
         <section id="work">
             <h1><u>Work</u></h1>
@@ -59,14 +68,18 @@
             </ul>
             <div>
                 <video width="640" height="360" controls>
-                <source src="video/video.mp4" type="video/mp4">
-                BillGates
-            </video>
+                    <source src="video/video.mp4" type="video/mp4">
+                    BillGates
+                </video>
             </div>
         </section>
         <section id="resume">
             <h1><u>Resume</u></h1>
-            <p>Bill Gates is an American business magnate, software developer, and philanthropist. He co-founded Microsoft in 1975, leading the company to dominate the personal computer industry with Windows. Known for his innovation and strategic vision, Gates became one of the richest people in the world. In 2000, he founded the Bill & Melinda Gates Foundation, focusing on global health, education, and poverty reduction. Today, he is recognized as both a technology pioneer and a leading humanitarian.</p>
+            <p>Bill Gates is an American business magnate, software developer, and philanthropist. He co-founded
+                Microsoft in 1975, leading the company to dominate the personal computer industry with Windows. Known
+                for his innovation and strategic vision, Gates became one of the richest people in the world. In 2000,
+                he founded the Bill & Melinda Gates Foundation, focusing on global health, education, and poverty
+                reduction. Today, he is recognized as both a technology pioneer and a leading humanitarian.</p>
             <audio controls>
                 <source src="Audio/music.mp3" type="audio/mp3">
             </audio>
